--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,8 @@ body{
 
 .top-pane{
   background-color: hsl(225,6%,25%);
+  margin-top: 12vh;
+  
 }
 
 .pane{
@@ -18,6 +20,22 @@ body{
   flex-direction: column;
   padding: .5rem;
   background-color: hsl(225,6%,25%) ;
+}
+.editor-container.collapsed{
+  flex-grow: 0;
+}
+
+.editor-container.collapsed .CodeMirror-scroll{
+  position: absolute;
+}
+
+.editor-container2{
+  flex-grow: 1;
+  flex-basis: 0;
+  display: flex;
+  flex-direction: column;
+  padding: .5rem;
+  background-color: rgb(240, 198, 62) ;
 }
 
 .editor-title{
@@ -38,4 +56,18 @@ body{
   border-bottom-right-radius: .5rem;
   border-bottom-left-radius: .5rem;
   overflow: hidden;
+}
+.graph-graph-container-zoomable{
+  background-color: coral;
+}
+
+
+@media screen  and (max-width:500px){
+
+  .top-pane{ 
+    margin-top: 22vh;
+    
+  
+}
+
 }
